--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,12 +29,10 @@ jobs:
         curl "https://pinyin.sogou.com/d/dict/download_cell.php?id=4&name=hot&f=detail" -H "Referer: http://pinyin.sogou.com/" -o ./scel2txt/scel/hot.scel
         cd ./scel2txt || exit 1
         python ./scel2txt.py
-        mv ./out/luna_pinyin.sogou.dict.yaml ./out/sogou_hot.dict.yaml
+        mv ./out/luna_pinyin.sogou.dict.yaml ../sogou_hot.dict.yaml
 
     - name: Git push
       run: |
-        cd ./scel2txt/out || exit 1
-        git init
         git config --local user.name "github-actions[bot]"
         git config --local user.email "github-actions[bot]@users.noreply.github.com"
         git add ./sogou_hot.dict.yaml
