--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,8 @@ jobs:
         curl "https://pinyin.sogou.com/d/dict/download_cell.php?id=4&name=hot&f=detail" -H "Referer: http://pinyin.sogou.com/" -o ./scel2txt/scel/hot.scel
         cd ./scel2txt || exit 1
         python ./scel2txt.py
-        mv ./out/luna_pinyin.sogou.dict.yaml ../sogou_hot.dict.yaml
+        cat luna_pinyin.sogou.dict.yaml ../sogou_hot.dict.yaml | sort | uniq > combine.yaml
+        mv combine.yaml ../sogou_hot.dict.yaml
 
     - name: Get Rime-ice dicts
       run: |
