--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,6 +37,8 @@ jobs:
       run: |
         curl https://raw.githubusercontent.com/iDvel/rime-ice/main/cn_dicts/8105.dict.yaml -o 8105.dict.yaml
         curl https://raw.githubusercontent.com/iDvel/rime-ice/main/cn_dicts/base.dict.yaml -o base.dict.yaml
+        # 添加八股文选项
+        sed '/sort: by_weight/a\use_preset_vocabulary: true' base.dict.yaml
 
     - name: Git push
       run: |
