--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,7 +47,7 @@ jobs:
         git diff --exit-code || echo "Changes detected"
 
     - name: Git push
-      if: steps.check_diff.outputs.stdout != 'Changes detected'
+      if: steps.check_diff.outputs.stdout == 'Changes detected'
       run: |
         git config --local user.name "github-actions[bot]"
         git config --local user.email "github-actions[bot]@users.noreply.github.com"
