--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,7 +47,7 @@ jobs:
         git diff --quiet && echo "Not Change" || echo "Changes detected"
 
     - name: Git push
-      if: steps.check_diff.outputs.stdout != 'Not Change'
+      if: steps.check_diff.outputs.stdout != "Not Change"
       run: |
         git config --local user.name "github-actions[bot]"
         git config --local user.email "github-actions[bot]@users.noreply.github.com"
