--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,6 +38,7 @@ jobs:
       run: |
         curl https://raw.githubusercontent.com/gaboolic/rime-frost/master/cn_dicts/8105.dict.yaml -o 8105.dict.yaml
         curl https://raw.githubusercontent.com/gaboolic/rime-frost/master/cn_dicts/base.dict.yaml -o base.dict.yaml
+        curl https://raw.githubusercontent.com/iDvel/rime-ice/main/cn_dicts/tencent.dict.yaml -o tencent.dict.yaml
         # 添加八股文选项
         sed -i '/sort: by_weight/a\use_preset_vocabulary: true' base.dict.yaml
 
